# casbin_demo

./: .gitignore  README.md  init_db.py  pyproject.toml  test_permission.py
app/: main.py
app/api/auth/: auth.py
app/api/v1/: __init__.py  debug.py  enterprises.py  permissions.py  resources.py  roles.py  users.py
app/core/: auth.py  config.py  database.py  permission_manager.py  redis_cache.py  security.py
app/models/: __init__.py  base.py  enterprise.py  organization.py  relationships.py  resource.py  role.py  user.py
app/schemas/: base.py  enterprise.py  resource.py  role.py  user.py
app/services/: enterprise_service.py  resource_service.py  role_service.py  user_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  EnterpriseManagement.tsx  Login.tsx  ResourceManagement.tsx  RoleManagement.tsx  UserManagement.tsx
frontend/src/services/: api.ts  apiClient.ts  auth.ts  enterprise.ts  enterpriseService.ts  resource.ts  resourceService.ts  role.ts  roleService.ts  user.ts
frontend/src/types/: index.ts
frontend/src/utils/: store.ts
